Fixed width on smaller devices for project page

--- a/src/projects/Projects.module.css
+++ b/src/projects/Projects.module.css
@@ -6,16 +6,14 @@
     flex-direction: column;
 
     --project-gap: 2rem;
-}
 
-.projects {
     gap: var(--project-gap);
     width: 60%;
     margin: 0 auto;
 }
 
 @media (max-width: 1024px) {
-    .workExperienceCompanies {
+    .projects {
         width: 100%;
     }
 }
